# adscout

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  server.py  vercel.json
adscout/: __init__.py  analyst.py  cli.py  client.py  config.py  copywriting.py  creative_client.py  endpoints.py  meta_client.py  moz_client.py  research.py  screenshot_client.py  strategy.py  tools.py  web.py
api/: ask.py  status.py
public/: index.html
tests/: test_offline.py
