[project]
name = "adscout"
version = "0.1.0"
description = "Ask marketing questions; get answers proven with competitive-intelligence data."
requires-python = ">=3.10"
dependencies = ["anthropic>=0.40", "httpx>=0.27"]

[project.scripts]
adscout = "adscout.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["adscout"]
